# airflow-edge-worker-demo

./: .gitignore  Dockerfile  README.md  airflow.cfg  docker-compose.yml  pyproject.toml  setup.py  test.sh
base/: demo.py
dags/: assets.py  file_consumer_dag.py  file_producer_dag.py  logger.py  sh_handler.py
filestorage/: 20251020.txt
